<resources>
    <string name="app_name">Dissajob</string>
    <string name="txt_sign_in_header">Selamat Datang Di Dissajob</string>
    <string name="txt_sign_in">Masuk</string>
    <string name="txt_sign_up_headline">Bergabung Sekarang di Dissajob</string>
    <string name="txt_sign_up">Daftar</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_current_password">Password saat ini</string>
    <string name="txt_lupa_password">Lupa password ?</string>
    <string name="txt_first_name">Nama depan</string>
    <string name="txt_last_name">Nama belakang (opsional)</string>
    <string name="txt_phone_number">Nomor telepon</string>
    <string name="txt_confirm_password">Confirm password</string>
    <string name="txt_success_update">%1$s berhasil diubah</string>
    <string name="txt_success_delete">%1$s berhasil dihapus</string>
    <string name="txt_failure_update">%1$s gagal diubah</string>
    <string name="txt_failure_update_email">Email gagal diubah</string>
    <string name="txt_failure_update_phone_number">Nomor telepon gagal diubah</string>
    <string name="txt_failure_upload_profile_picture">Gagal upload foto profil</string>
    <string name="txt_wrong_password">Password salah</string>
    <string name="txt_email_not_found">Email tidak ditemukan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_search_job">Cari pekerjaan</string>
    <string name="txt_no_job">Tidak ada pekerjaan</string>
    <string name="home">Home</string>
    <string name="notification">Notifikasi</string>
    <string name="profile">Profil</string>
    <string name="txt_job_details_toolbar_title">Detail Pekerjaan</string>
    <string name="txt_job_type">%1$s \u2022 %2$s</string>
    <string name="txt_job_description">Deskripsi Pekerjaan</string>
    <string name="job_details_additional_information">Keterangan tambahan : %1$s</string>
    <string name="txt_job_details_title">Detail</string>
    <string name="txt_job_qualification_title">Kualifikasi</string>
    <string name="txt_job_industry_title">Industri</string>
    <string name="txt_job_salary_title">Gaji</string>
    <string name="txt_lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="txt_loading">Loading</string>
    <string name="txt_update">Update</string>
    <string name="edit_text_error_alert">%1$s tidak boleh kosong</string>
    <string name="email_is_not_verified">Silahkan lakukan verifikasi email terlebih dahulu</string>
    <string name="error_login">Email/Password anda salah</string>
    <string name="edit_text_alert_email_invalid">Email tidak valid</string>
    <string name="edit_text_alert_password_not_match">%1$s tidak cocok</string>
    <string name="txt_alert_success_sign_up">Silahkan lakukan verifikasi email</string>
    <string name="edit_text_alert_phone_number_invalid">Nomor telepon tidak valid</string>
    <string name="alert_email_not_available">Email sudah digunakan</string>
    <string name="txt_back">Kembali</string>
    <string name="txt_reset_password">Reset Password</string>
    <string name="txt_sub_heading_reset_password">Masukkan email yang terkait dengan akun anda dan kami akan mengirimkan email dengan instruksi untuk mengatur ulang kata sandi anda.</string>
    <string name="txt_send">Kirim</string>
    <string name="txt_success_alert_reset_password">Email reset password telah dikirimkan</string>
    <string name="txt_change_email_title">Ganti Email</string>
    <string name="txt_change_email_description">Masukkan alamat email aktif</string>
    <string name="txt_same_email">Email tidak boleh sama dengan yang sebelumnya</string>
    <string name="txt_current_email">Email saat ini</string>
    <string name="txt_new_email">Email baru</string>
    <string name="txt_change_phone_number_title">Ganti Nomor Telepon</string>
    <string name="txt_change_phone_number_description">Masukkan nomor telepon aktif</string>
    <string name="txt_current_phone_number">Nomor saat ini</string>
    <string name="txt_new_phone_number">Nomor telepon baru</string>
    <string name="txt_change_password_title">Ganti kata sandi</string>
    <string name="txt_change_password_description">Masukkan kata sandi yang kuat</string>
    <string name="txt_new_password">Password baru</string>
    <string name="txt_change_password_note">*Mohon tidak menggunakan password yang lama</string>
    <string name="txt_change_password_first_rule">8 karakter atau lebih</string>
    <string name="txt_change_password_second_rule">Kombinasi huruf besar, kecil, angka dan simbol</string>
    <string name="txt_change_profile_title">Edit profil</string>
    <string name="txt_about_me">Tentang saya</string>
    <string name="txt_settings">Pengaturan</string>
    <string name="txt_security">Keamanan</string>
    <string name="txt_advance">Lanjutan</string>
    <string name="txt_sign_out">Keluar</string>
    <string name="txt_saved_job">Pekerjaan Tersimpan</string>
    <string name="txt_list_application">Daftar lamaran</string>
    <string name="txt_work_experience">Pengalaman Kerja</string>
    <string name="txt_educational_background">Riwayat Pendidikan</string>
    <string name="txt_media">Media</string>
    <string name="txt_contact">Kontak</string>
    <string name="txt_view_all">Lihat semua</string>
    <string name="txt_logout_title">Keluar dari Dissajob</string>
    <string name="txt_logout_message">Apakah Anda ingin keluar?</string>
    <string name="confirm_logout_text">Keluar</string>
    <string name="confirm_cancel_text">Batal</string>
    <string name="txt_first_question">Deskripsikan diri Anda secara singkat</string>
    <string name="txt_second_question">Alasan Anda melamar di perusahaan kami</string>
    <string name="txt_third_question">Mengapa kami harus menerima Anda</string>
    <string name="txt_additional_information">Informasi Tambahan</string>
    <string name="txt_available_job">Pekerjaan yang tersedia</string>
    <string name="txt_application_details">Detail Lamaran</string>
    <string name="txt_search_history">Riwayat penelusuran</string>
    <string name="txt_delete_history">Hapus riwayat</string>
    <string name="txt_failure_insert">%1$s gagal ditambahkan</string>
    <string name="txt_failure_delete">%1$s gagal dihapus</string>
    <string name="txt_upload_media_description">Unggah media</string>
    <string name="txt_failure_upload_media">Gagal upload media</string>
    <string name="txt_media_name">Judul</string>
    <string name="txt_media_description">Deskripsi</string>
    <string name="txt_add">Tambahkan</string>
    <string name="txt_application_status">Status Lamaran</string>
    <string name="txt_no_experience">Belum ada pengalaman</string>
    <string name="txt_company_type">%1$s \u2022 %2$s</string>
    <string name="txt_range_date">%1$s - %2$s</string>
    <string name="txt_education_level_field_of_study">%1$s, %2$s</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_delete">Hapus</string>
    <string name="txt_cancel">Batal</string>
    <string name="tv_success_adding_media">Media berhasil ditambahkan</string>
    <string name="txt_school_name">Nama sekolah</string>
    <string name="txt_field_of_study">Bidang studi</string>
    <string name="txt_start_date">Tanggal mulai</string>
    <string name="txt_end_date_education">Tanggal selesai (atau perkiraan)</string>
    <string name="txt_end_date_experience">Tanggal selesai</string>
    <string name="txt_description">Deskripsi</string>
    <string name="txt_save">Simpan</string>
    <string name="txt_saved">Disimpan</string>
    <string name="txt_start_end_date_value">%1$s %2$s</string>
    <string name="txt_invalid_start_date">Tanggal mulai tidak boleh setelah tanggal selesai</string>
    <string name="txt_invalid_end_date">Tanggal selesai tidak boleh sebelum tanggal mulai</string>
    <string name="tv_success_adding_experience">Pengalaman kerja berhasil ditambahkan</string>
    <string name="tv_success_adding_education">Riwayat pendidikan berhasil ditambahkan</string>
    <string name="txt_elementary_school">SD</string>
    <string name="txt_junior_high_school">SMP</string>
    <string name="txt_senior_high_school">SMA</string>
    <string name="txt_vocational_high_school">SMK</string>
    <string name="txt_diploma_one">D1</string>
    <string name="txt_diploma_two">D2</string>
    <string name="txt_diploma_three">D3</string>
    <string name="txt_diploma_four">D4</string>
    <string name="txt_bachelor_degree">S1</string>
    <string name="txt_undergraduate_degree">S2</string>
    <string name="txt_postgraduate_degree">S3</string>
    <string name="txt_education_level">Tingkat pendidikan</string>
    <string name="txt_experience_delete_alert">Hapus pengalaman kerja ?</string>
    <string name="txt_education_delete_alert">Hapus riwayat pendidikan ?</string>
    <string name="txt_title">Judul</string>
    <string name="txt_edit_text_title_hint">Contoh : Software Engineer</string>
    <string name="txt_employment_type">Jenis pekerjaan</string>
    <string name="txt_edit_text_company_name_hint">Contoh : Telkom University</string>
    <string name="txt_checkbox_current_working_hint">Ini adalah pekerjaan saya saat ini</string>
    <string name="txt_location">Lokasi</string>
    <string name="txt_company_name">Nama perusahaan</string>
    <string name="txt_full_time">Purnawaktu</string>
    <string name="txt_part_time">Paruh waktu</string>
    <string name="txt_self_employed">Wiraswasta</string>
    <string name="txt_freelance">Pekerja lepas</string>
    <string name="txt_contract">Kontrak</string>
    <string name="txt_internship">Magang</string>
    <string name="txt_currently_working">Sedang bekerja di posisi ini</string>
    <string name="txt_present">Saat ini</string>
    <string name="txt_open_for_disability">Terbuka untuk penyandang disabilitas</string>
    <string name="txt_media_delete_alert_dynamic">Hapus %1$s ?</string>
    <string name="txt_media_delete_alert_static">Hapus media ?</string>
    <string name="txt_alert_apply">Masukkan lamaran ?</string>
    <string name="txt_success_apply">Pekerjaan berhasil dilamar</string>
    <string name="txt_failure_apply">Gagal melamar pekerjaan</string>
    <string name="txt_success_save_job">Pekerjaan berhasil disimpan</string>
    <string name="txt_apply">Lamar</string>
    <string name="txt_my_application">Lamaran saya</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_apply_at">Dilamar pada</string>
    <string name="txt_close_recruitment">Tidak lagi menerima lamaran kerja</string>
    <string name="txt_error_occurred">Terjadi kesalahan</string>
    <string name="txt_fill_all_data_alert">Silahkan untuk melengkapi data terlebih dahulu</string>
    <string name="txt_notification_title">%1$s telah memeriksa lamaran anda</string>
    <string name="txt_notification_body">Ayo lihat lamaran anda sekarang</string>
    <string name="txt_view_application">Lihat lamaran</string>
    <string name="txt_no_notification">Tidak ada notifikasi</string>
    <string name="txt_menu">Menu</string>
</resources>