<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.education.EducationDegreeActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:theme="@style/CustomToolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextAppearance="@style/Toolbar.TitleText" />

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="?android:listDivider"
            android:dividerPadding="@dimen/margin_16dp"
            android:orientation="vertical"
            android:showDividers="middle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <TextView
                android:id="@+id/tvElementaryLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/roboto"
                android:padding="@dimen/margin_16dp"
                android:text="@string/txt_elementary_school"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvJuniorLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/roboto"
                android:padding="@dimen/margin_16dp"
                android:text="@string/txt_junior_high_school"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSeniorLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/roboto"
                android:padding="@dimen/margin_16dp"
                android:text="@string/txt_senior_high_school"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvVocationalLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/roboto"
                android:padding="@dimen/margin_16dp"
                android:text="@string/txt_vocational_high_school"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDiplomaOneLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/roboto"
                android:padding="@dimen/margin_16dp"
                android:text="@string/txt_diploma_one"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDiplomaTwoLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/roboto"
                android:padding="@dimen/margin_16dp"
                android:text="@string/txt_diploma_two"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDiplomaThreeLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/roboto"
                android:padding="@dimen/margin_16dp"
                android:text="@string/txt_diploma_three"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDiplomaFourLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/roboto"
                android:padding="@dimen/margin_16dp"
                android:text="@string/txt_diploma_four"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBachelorLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/roboto"
                android:padding="@dimen/margin_16dp"
                android:text="@string/txt_bachelor_degree"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvUndergraduateLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/roboto"
                android:padding="@dimen/margin_16dp"
                android:text="@string/txt_undergraduate_degree"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPostgraduateLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/roboto"
                android:padding="@dimen/margin_16dp"
                android:text="@string/txt_postgraduate_degree"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>