<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.experience.AddEditExperienceActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:theme="@style/CustomToolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextAppearance="@style/Toolbar.TitleText" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/txt_title"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/roboto"
            android:hint="@string/txt_edit_text_title_hint"
            android:inputType="textCapWords"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/tvEmploymentType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/txt_employment_type"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etTitle" />

        <EditText
            android:id="@+id/etEmploymentType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:backgroundTint="@color/black"
            android:cursorVisible="false"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/roboto"
            android:inputType="textCapWords"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEmploymentType" />

        <TextView
            android:id="@+id/tvCompanyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/txt_company_name"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmploymentType" />

        <EditText
            android:id="@+id/etCompanyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/roboto"
            android:hint="@string/txt_edit_text_company_name_hint"
            android:inputType="textCapWords"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCompanyName" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/txt_location"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etCompanyName" />

        <EditText
            android:id="@+id/etLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/roboto"
            android:inputType="textCapWords"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLocation" />

        <CheckBox
            android:id="@+id/cbCurrentWorking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/txt_checkbox_current_working_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etLocation" />

        <TextView
            android:id="@+id/tvStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/txt_start_date"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cbCurrentWorking" />

        <EditText
            android:id="@+id/etStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:backgroundTint="@color/black"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/ic_calendar_gray_24dp"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/roboto"
            android:inputType="date"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStartDate" />

        <TextView
            android:id="@+id/tvInvalidStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/txt_invalid_start_date"
            android:textColor="@color/red"
            android:textSize="13sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etStartDate" />

        <TextView
            android:id="@+id/tvEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/txt_end_date_experience"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvInvalidStartDate" />

        <EditText
            android:id="@+id/etEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:backgroundTint="@color/black"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/ic_calendar_gray_24dp"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/roboto"
            android:inputType="date"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEndDate" />

        <TextView
            android:id="@+id/tvInvalidEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/txt_invalid_end_date"
            android:textColor="@color/red"
            android:textSize="13sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEndDate" />

        <TextView
            android:id="@+id/tvEducationDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/txt_description"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvInvalidEndDate" />

        <EditText
            android:id="@+id/etExperienceDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/roboto"
            android:inputType="textCapSentences"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEducationDescription" />

        <Button
            android:id="@+id/btnSubmitExperience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/roboto"
            android:padding="@dimen/margin_16dp"
            android:text="@string/txt_add"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etExperienceDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>